--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,145 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: linear-gradient(
+    180deg,
+    rgba(28, 83, 128, 1) 0%,
+    rgba(6, 54, 95, 1) 100%
+  );
+  background-size: 100% 400px;
+  background-repeat: no-repeat;
+}
+
+h1,
+h5,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.main-div {
+  display: flex;
+  justify-content: space-between;
+  padding: 10% 10% 5%;
+}
+
+.phone {
+  width: 35%;
+}
+
+.phone > img {
+  width: 100%;
+}
+
+section {
+  width: 58%;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin: 20px 0;
+}
+
+header > img {
+  width: 60%;
+}
+
+.btn {
+  width: 140px;
+  height: 60px;
+
+  background: linear-gradient(
+    180deg,
+    rgba(28, 83, 128, 1) 0%,
+    rgba(6, 54, 95, 1) 100%
+  );
+  border: 1px solid #06365f;
+  border-radius: 4px;
+  box-shadow: 0px 12px 50px -25px rgba(200, 200, 200, 0.75);
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.btn img {
+  width: 30%;
+}
+
+.btn p {
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.text-div {
+  background-image: url("../images/frame.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  /* border-radius: 4px; */
+  padding: 45px 50px 0;
+
+  /* box-shadow: 0px -12px 50px -25px rgba(0, 0, 0, 0.75); */
+}
+
+.text-div h1 {
+  font-size: 2em;
+  line-height: 1.3em;
+  color: #06365f;
+
+  margin-bottom: 25px;
+}
+
+.text-div p {
+  font-size: 1.3rem;
+  font-weight: normal;
+  color: #444;
+}
+
+.text-div h5 {
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: #444;
+
+  margin: 13px 0;
+}
+
+.badges > img {
+  height: 65px;
+  padding-right: 20px;
+  padding-top: 25px;
+  cursor: pointer;
+}
+
+nav {
+  width: 50%;
+  margin: 0 auto;
+  padding-bottom: 70px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+nav ul > li {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #1c5380;
+  font-size: 0.85rem;
+  padding: 5px;
+  cursor: pointer;
+}
+
+nav ul > li:last-child {
+  color: #999;
 }
