--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,159 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 12px;
+}
+
+img {
+  width: 100px;
+  height: auto;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  background-image: url(/starter-code/images/bgtile.png);
+  background-repeat: no-repeat;
+  background-size: 100% 330px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding-top: 100px;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 800px;
+  height: 100vh;
+  padding: 50px 0;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 500px;
+  width: 900px;
+  margin: 0 0 0 0;
+}
+
+main>img {
+  height: 100%;
+  width: auto;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav img {
+  width: 70%;
+}
+
+nav button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px;
+  width: 80px;
+  font-size: ;
+  height: 35px;
+  border-radius: 2px;
+
+  background-image: url(/starter-code/images/bgtile.png);
+  background-size: 100px 100px;
+  color: #FFF;
+  border: none;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(to bottom, #9fc2df 5%, #517e99 35%);
+}
+
+button p {
+  font-size: 1em;
+  font-weight: 500;
+}
+
+button img {
+  width: 25px;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 45%;
+  height: 100%;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  background-image: url(/starter-code/images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100% 70%;
+  height: 80%;
+  padding: 30px;
+}
+
+.textContainer h1 {
+  font-size: 1.8em;
+  font-weight: bold;
+  width: 70%;
+  line-height: 1.3em;
+  color: #06365f
+}
+
+.textContainer p {
+  font-size: 1.2em;
+}
+
+.textContainer div {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 13%;
+}
+
+.textContainer img {
+  height: 100%;
+  width: auto;
+  margin-right: 15px;
+}
+
+footer ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+footer li {
+  margin: 0 10px;
+  font-weight: bold;
+  color: #1c5380;
+}
+
+li:last-child {
+  color: #CCC;
+  margin-left: 20px;
 }
