--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,22 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+section.mainSection{
+  height: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url();
+    background-size: cover;
+    background-position: center;
+
 }
