--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,88 @@ light blue: #1c5380
 */
 
 body {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1 {
+  color: #3a6890;
+}
+
+.moviles {
+  margin-right: 80px;
+}
+
+.contenedor {
+  align-content: center;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 6%;
+  width: 50%;
+}
+
+span {
+  margin-left: 20px;
+}
+
+.bold {
+  font-weight: 600;
+}
+
+.contenido {
+  border-top: 4px solid silver;
+  border-left: 4px solid silver;
+  border-right: 4px solid silver;
+  background: white;
+  padding: 70px;
+}
+
+button {
+  color: white;
+  background: linear-gradient(rgba(255, 255, 255, 0.1), #1c5380);
+  box-shadow: 0 0 4px #06365f;
+  border: none;
+  height: 40px;
+  padding: 15px;
+  width: 130px;
+}
+
+.login {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+a {
+  color: #06365f;
+  font-weight: 400;
+  margin-right: 40px;
+  text-decoration: none;
+}
+
+.lista li {
+  display: inline;
+}
+
+.copy {
+  color: silver;
+}
+
+.logos {
+  margin-left: 30px;
+  margin-bottom: 60px;
 }
